lanecwe-Prod/src/objects/Quote_History__c.object
<CustomObject>
    <fields>
        <fullName>Counter__c</fullName>
        <label>Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_modified__c</fullName>
        <label>Date modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Edited_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Edited By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quote_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <label>New Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote History</relationshipLabel>
        <relationshipName>Quote_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Quote History</label>
    <nameField>
        <label>Quote History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>